<resources>
    <string name="app_name">Grocery App</string>
    <string name="username">Username</string>
    <string name="password">  Password</string>
    <string name="email">  Email</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="signUp">Sign Up</string>
    <string name="search_text">search text</string>
    <string name="login">Sign In</string>
    <string name="rememberMe">Remember me</string>
    <string name="donthaveAccount">Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="firstName">First Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letsOrder">Let\'s order fresh items for you</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
</resources>