<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/login"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topLine" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailInput"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/passwordInput"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintTop_toBottomOf="@id/signUp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInput"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/rememberCheckbox"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintTop_toBottomOf="@id/emailInput" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/rememberCheckbox"
            android:layout_width="30dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintEnd_toStartOf="@id/rememberCheckbox"
            app:layout_constraintTop_toBottomOf="@id/passwordInput" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rememberMeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/rememberMe"
            app:layout_constraintStart_toEndOf="@id/rememberCheckbox"
            app:layout_constraintTop_toBottomOf="@id/passwordInput" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:text="@string/donthaveAccount"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/rightLine"
            app:layout_constraintTop_toBottomOf="@id/passwordInput" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/signIn"
            app:layout_constraintBottom_toTopOf="@id/bottomLine"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintTop_toBottomOf="@id/rememberCheckbox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>