<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:elevation="10dp"
    tools:context=".view.fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
            android:id="@+id/leftLine"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            android:id="@+id/rightLine"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"
            android:id="@+id/topLine"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"
            android:id="@+id/bottomLine"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:text="Sign Up"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topLine"
            app:layout_constraintBottom_toTopOf="@id/firstNameInput"
            android:layout_marginTop="@dimen/_20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/firstNameInput"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:drawableStart="@drawable/baseline_person_24"
            app:layout_constraintTop_toBottomOf="@id/signUp"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintBottom_toTopOf="@id/emailInput"
            android:hint="@string/firstName"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailInput"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:drawableStart="@drawable/baseline_email_24"
            app:layout_constraintTop_toBottomOf="@id/firstNameInput"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintBottom_toTopOf="@id/mobileInput"
            android:hint="@string/email"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobileInput"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:drawableStart="@drawable/baseline_phone_24"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintBottom_toTopOf="@id/passwordInput"
            android:hint="@string/mobileNumber"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInput"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/baseline_lock_24"
            app:layout_constraintTop_toBottomOf="@id/mobileInput"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/signUpBtn"
            android:hint="@string/password"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:id="@+id/cancelBtn"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="@id/leftLine"
            app:layout_constraintEnd_toStartOf="@id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintBottom_toTopOf="@id/bottomLine"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:id="@+id/signUpBtn"
            android:text="@string/signUp"
            app:layout_constraintStart_toEndOf="@id/cancelBtn"
            app:layout_constraintEnd_toEndOf="@id/rightLine"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintBottom_toTopOf="@id/bottomLine"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>